# Tpedia

./: .gitignore  Cargo.toml
data/: db.json
src/: main.rs  wikimedia_types.rs
